src/test/rustdoc-ui/intra-doc/unknown-disambiguator.stderr
error: unknown disambiguator `foo`
  --> $DIR/unknown-disambiguator.rs:3:17
   |
LL | //! Linking to [foo@banana] and [`bar@banana!()`].
   |                 ^^^
   |
note: the lint level is defined here
  --> $DIR/unknown-disambiguator.rs:1:9
   |
LL | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(rustdoc::broken_intra_doc_links)]` implied by `#[deny(warnings)]`
   = note: see https://doc.rust-lang.org/nightly/rustdoc/linking-to-items-by-name.html#namespaces-and-disambiguators for more info about disambiguators

error: unknown disambiguator `bar`
  --> $DIR/unknown-disambiguator.rs:3:35
   |
LL | //! Linking to [foo@banana] and [`bar@banana!()`].
   |                                   ^^^
   |
   = note: see https://doc.rust-lang.org/nightly/rustdoc/linking-to-items-by-name.html#namespaces-and-disambiguators for more info about disambiguators

error: unknown disambiguator `foo`
  --> $DIR/unknown-disambiguator.rs:9:34
   |
LL | //! And with weird backticks: [``foo@hello``] [foo`@`hello].
   |                                  ^^^
   |
   = note: see https://doc.rust-lang.org/nightly/rustdoc/linking-to-items-by-name.html#namespaces-and-disambiguators for more info about disambiguators

error: unknown disambiguator `foo`
  --> $DIR/unknown-disambiguator.rs:9:48
   |
LL | //! And with weird backticks: [``foo@hello``] [foo`@`hello].
   |                                                ^^^
   |
   = note: see https://doc.rust-lang.org/nightly/rustdoc/linking-to-items-by-name.html#namespaces-and-disambiguators for more info about disambiguators

error: unknown disambiguator ``
  --> $DIR/unknown-disambiguator.rs:6:31
   |
LL | //! And to [no disambiguator](@nectarine) and [another](@apricot!()).
   |                               ^
   |
   = note: see https://doc.rust-lang.org/nightly/rustdoc/linking-to-items-by-name.html#namespaces-and-disambiguators for more info about disambiguators

error: unknown disambiguator ``
  --> $DIR/unknown-disambiguator.rs:6:57
   |
LL | //! And to [no disambiguator](@nectarine) and [another](@apricot!()).
   |                                                         ^
   |
   = note: see https://doc.rust-lang.org/nightly/rustdoc/linking-to-items-by-name.html#namespaces-and-disambiguators for more info about disambiguators

error: aborting due to 6 previous errors

